# graft

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  SAFETY.md  pyproject.toml
HA/: Checkbox Multi-Condition Query.cpt  HA-TRANSLATION-PLAN.md  NDMS-RC-0055-pm (1).jrxml  NDMS-S&V-006A (1).jrxml  NDMS-S&V-006A (202505) (1).xlsx  NDMS-TN-0028 (1).docx  NDMS-TN-0028 (1).jrxml
HA/finereport/: NDMS-RC-0055-pm.cpt  NDMS-S&V-006A.cpt  NDMS-TN-0028.cpt
docs/adr/: 0001-ir-first-architecture.md  0002-separate-translation-from-writers.md  0003-filter-scope-hierarchical-ownership.md  0004-dataclasses-first-pydantic-later.md  0005-expressions-raw-strings-in-ir.md  0006-spoke-prioritization.md  (+8 more)
reviews/: review-20260525-183734-b0d098.md  review-20260601-185132-d1dbc2.md
spike/: README.md  java_to_sql.py  test_java_to_sql.py
src/graft/: cli.py  (+3 more)
tests/: test_chinese_convert.py  test_cli.py  test_cli_finereport.py  test_cli_jasper.py  test_cli_portfolio.py  test_cli_translate.py  test_export.py  test_expression_coverage.py  test_finereport_cells.py  test_finereport_datasources.py  test_finereport_functions.py  test_finereport_reader.py  test_finereport_utils.py  test_finereport_widgets.py  test_finereport_writer.py  test_jasper_bands.py  test_jasper_complexity.py  test_jasper_export.py  test_jasper_local_samples.py  test_jasper_portfolio.py  test_jasper_query.py  test_jasper_reader.py  test_jasper_subreports.py  test_jasper_tables.py  test_jasper_utils.py  test_java_string_runtime.py  test_models.py  test_models_finereport.py  test_models_jasper.py  test_models_tables.py  test_registry_finereport.py  test_registry_jasper.py  test_tableau_reader.py  test_translate_bands.py  test_translate_expression.py  test_translate_jasper_finereport.py  test_writer_registry.py
(+50 files in other folders)
