[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graft-bi"
version = "0.1.0"
description = "AI-native BI report translation between platforms"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "Augustin Chan", email = "aug@digitalrain.studio" },
]
keywords = [
    "bi-migration",
    "business-intelligence",
    "report-translation",
    "tableau",
    "power-bi",
    "looker",
    "yonghong",
    "metabase",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Office/Business",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
tableau = [
    "lxml>=5.0",
]
powerbi = [
    "lxml>=5.0",
]
llm = [
    "openai>=1.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
graft = "graft.cli:main"

[project.urls]
Homepage = "https://github.com/digital-rain-tech/graft"
Documentation = "https://github.com/digital-rain-tech/graft"
Repository = "https://github.com/digital-rain-tech/graft"
Issues = "https://github.com/digital-rain-tech/graft/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/graft"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
